--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "eslint . && jest --coverage --forceExit --runInBand",
     "lint": "eslint .",
     "dbOn": "mkdir -p ./db && mongod --dbpath ./db",
-    "dbOff": "killall mongod"
+    "dbOff": "killall mongod",
+    "start": "node src/main.js"
   },
   "jest": {
     "setupFiles": [
